--- a/UitleensysteemApp/app/templates/app/index.html
+++ b/UitleensysteemApp/app/templates/app/index.html
@@ -1,9 +1,11 @@
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    {% tailwind_css %}
 </head>
 <body>
     <h1>Hello World!</h1>
