--- a/UitleensysteemApp/app/templates/app/index.html
+++ b/UitleensysteemApp/app/templates/app/index.html
@@ -7,7 +7,7 @@
     <title>Index</title>
     {% tailwind_css %}
 </head>
-<body>
+<body class="min-h-screen bg-gradient-to-b from-slate-950 to-blue-950">
     <h1>Hello World!</h1>
 </body>
 </html>
