"Form buttons" naar "submit inputs" veranderd.

--- a/UitleensysteemApp/app/templates/app/signup.html
+++ b/UitleensysteemApp/app/templates/app/signup.html
@@ -7,5 +7,5 @@
 <input class="bg-slate-600 rounded-md" placeholder="Username">
 <input class="bg-slate-600 rounded-md" placeholder="Password">
 <a href="signin"><h1 class="text-blue-600">Sign in? <u>Click here</u></h1></a>
-<button class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800">Register</button>
+<input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Register"></input>
 {% endblock %} 
