--- a/UitleensysteemApp/app/templates/app/signin.html
+++ b/UitleensysteemApp/app/templates/app/signin.html
@@ -3,9 +3,11 @@
 {% block title%} EhB ESA | Sign In {% endblock %} 
 
 {% block body %} 
-<div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign In</div>
-<input class="bg-slate-600 rounded-md" placeholder="Username">
-<input class="bg-slate-600 rounded-md" placeholder="Password">
-<a href="signup"><h1 class="text-blue-600">Sign up? <u>Click here</u></h1></a>
-<input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Log in"></submit>
+<form class="grid bg-white px-16 py-8 place-content-center rounded-2xl justify-self-center space-y-4" method="post" action="#">
+    <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign In</div>
+    <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
+    <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password">
+    <a href="signup"><h1 class="text-blue-600">Sign up? <u>Click here</u></h1></a>
+    <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Log in"></submit>
+</form>
 {% endblock %} 
