--- a/UitleensysteemApp/app/templates/app/overview.html
+++ b/UitleensysteemApp/app/templates/app/overview.html
@@ -4,15 +4,34 @@
 
 {% block body %}
     {% if request.user.is_authenticated %}
-        <div class="min-h-full min-w-full grid place-content-center text-white bg-slate-600 rounded-2xl">
-            <p>Succesvol ingelogd!</p>
-            <p>username: {{ request.user.username }}</p>
-            <p>PBKDF2 algorithm with a SHA256 hash password:</p>
-            <p>{{ request.user.password }}</p>
+        <div class="grid mx-16 grid-rows-[auto_1fr] gap-4 min-h-screen">
+            <div class="grid items-center bg-gray-200 rounded-2xl mt-8 px-8 py-4 grid-cols-[9fr_1fr]">
+                    <h1 class="font-bold text-2xl text-slate-600">Overview</h1>
+                    <a class="bg-slate-600 px-4 py-4 rounded-2xl text-center text-slate-400 font-medium" href="logout_view">logout</a>
+            </div>
+            <div class="grid gap-8 bg-gray-200 rounded-2xl p-8 mb-8 grid-cols-[3fr_1fr]">
+                <div class="bg-slate-400 rounded-xl p-8">
+                    <p>Succesvol ingelogd!</p>
+                    <p>username: {{ request.user.username }}</p>
+                    <p>PBKDF2 algorithm with a SHA256 hash password:</p>
+                    <p>{{ request.user.password }}</p>
+                </div>
+                <div class="bg-slate-400 rounded-xl p-8">
+                    <p>test</p>
+                </div>
+            </div>
         </div>
 
     {% else %}
-        <h1>please log in</h1>
+    <div class="grid mx-16 grid-rows-[auto_1fr] gap-4 min-h-screen">
+        <div class="gap-8 bg-gray-200 rounded-2xl p-8 mb-8">
+            <div class="bg-slate-400 rounded-xl p-8">
+               <a href="signin">
+                <h1>please log in <u>here</u></h1>
+               </a>
+            </div>
+        </div>
+    </div>
     {% endif %} 
 
 {% endblock %} 
