--- a/UitleensysteemApp/app/templates/app/signin.html
+++ b/UitleensysteemApp/app/templates/app/signin.html
@@ -3,11 +3,20 @@
 {% block title%} EhB ESA | Sign In {% endblock %} 
 
 {% block body %} 
-<form class="grid bg-white px-16 py-8 place-content-center rounded-2xl justify-self-center space-y-4" method="post" action="login">{% csrf_token %}
-    <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign In</div>
-    <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
-    <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password">
-    <a href="signup"><h1 class="text-blue-600">Sign up? <u>Click here</u></h1></a>
-    <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Log in"></submit>
-</form>
+<div class="min-h-screen grid grid-cols-1 place-content-center">
+    <form class="grid bg-white px-16 py-8 place-content-center rounded-2xl justify-self-center space-y-4 shadow-2xl" method="post" action="login">{% csrf_token %}
+        {% if messages %}
+        <div class="bg-yellow-300 rounded-md p-4 text-slate-600 text-center">
+            {% for message in messages %}
+                <div class="toast {{ message.tags }}">{{ message }}</div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign In</div>
+        <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
+        <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password" type="password">
+        <a href="signup"><h1 class="text-blue-600">Sign up? <u>Click here</u></h1></a>
+        <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Log in"></submit>
+    </form>
+</div>
 {% endblock %} 
