--- a/UitleensysteemApp/app/templates/app/signup.html
+++ b/UitleensysteemApp/app/templates/app/signup.html
@@ -3,11 +3,13 @@
 {% block title%} EhB ESA | Sign Up {% endblock %} 
 
 {% block body %}
-<form class="grid bg-white px-16 py-8 place-content-center rounded-2xl justify-self-center space-y-4" method="post" action="#">{% csrf_token %}
-    <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign Up</div>
-    <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
-    <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password">
-    <a href="signin"><h1 class="text-blue-600">Sign in? <u>Click here</u></h1></a>
-    <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Register"></input>
-</form>
+<div class="min-h-screen grid grid-cols-1 place-content-center">
+    <form class="grid bg-white px-16 py-8 place-content-center rounded-2xl justify-self-center space-y-4" method="post" action="#">{% csrf_token %}
+        <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign Up</div>
+        <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
+        <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password">
+        <a href="signin"><h1 class="text-blue-600">Sign in? <u>Click here</u></h1></a>
+        <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Register"></input>
+    </form>
+</div>
 {% endblock %} 
