--- a/UitleensysteemApp/app/templates/app/event-controller.html
+++ b/UitleensysteemApp/app/templates/app/event-controller.html
@@ -17,7 +17,7 @@
                     <p class="break-words">{{ request.user.password }}</p>
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
-                    <a href="event_controller">Manage Events</a>
+                    <a href="overview">back</a>
                 </div>
             </div>
         </div>
