--- a/UitleensysteemApp/app/templates/app/event-manager.html
+++ b/UitleensysteemApp/app/templates/app/event-manager.html
@@ -12,31 +12,11 @@
             <div class="grid gap-4 sm:gap-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr] sm:grid-rows-[1fr_19fr] grid-rows-[auto_1fr]">
                 <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500 ">Event Manager</h2>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
-                    {% if calendarEvents %}
-                        <ul class="grid">
-                            {% for event in calendarEvents %}
-                                <li class="bg-slate-700 rounded-xl p-4">
-                                    <div class="bg-slate-800 rounded-2xl p-4 grid">
-                                        <h3 class="text-white">{{ event.eventid }}</h3>
-                                        <select class="text-slate-800" value='{{ eventtype.type }}'>
-                                        {% for eventtype in EventTypes %}
-                                            <option value='{{ eventtype.type }}'>{{ eventtype.type }}</option>
-                                        {% endfor %}
-                                        </select>
-                                        <input type="date" value="{{ event.eventid.start }}"></input>
-                                        <input type="date" value="{{ event.eventid.end }}"></input>
-                                        <input>Calendername: {{ event.calenderid }}</input>
-                                    </div>
-                                    <div class="flex place-content-end gap-4 py-4">
-                                        <input type="submit" class="bg-red-200 p-4 rounded-xl min-w-40 text-center" href="" value="Delete"></a>
-                                        <input type="submit" class="bg-green-200 p-4 rounded-xl min-w-40 text-center" href="" value="Update"></a>
-                                    </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    {% else %}
-                        <p>No events available</p>
-                    {% endif %}
+                    <form action="event_manager" method="post">
+                        {% csrf_token %}
+                        {{ form }}
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
                     <a class="grid bg-slate-700 rounded-xl p-4 text-slate-400" href="overview">Go Back</a>
