--- a/UitleensysteemApp/app/templates/app/overview.html
+++ b/UitleensysteemApp/app/templates/app/overview.html
@@ -17,7 +17,7 @@
                     <p class="break-words">{{ request.user.password }}</p>
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
-                    <a href="event_manager">Manage Events</a>
+                    <a href="event-manager">Manage Events</a>
                 </div>
             </div>
         </div>
