--- a/UitleensysteemApp/app/templates/app/overview.html
+++ b/UitleensysteemApp/app/templates/app/overview.html
@@ -9,12 +9,39 @@
                 <h1 class="font-bold text-2xl text-slate-600">Overview</h1>
                 <a class="bg-slate-600 px-4 py-2 sm:py-4 rounded-2xl text-center text-slate-400 font-medium" href="logout_view">logout</a>
             </div>
-            <div class="grid gap-4 sm:gap-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr]">
+            <div class="grid gap-4 sm:gap-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr] sm:grid-rows-[1fr_19fr] grid-rows-[auto_1fr]">
+                <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500 ">Welcome</h1>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
-                    <p>Succesvol ingelogd!</p>
-                    <p>username: {{ request.user.username }}</p>
-                    <p>PBKDF2 algorithm with a SHA256 hash password:</p>
-                    <p class="break-words">{{ request.user.password }}</p>
+                    <h2>
+                        {% if currentMonthInText %}
+                            All events for: {{currentMonthInText}}, 
+                        {% endif %}
+                        {% if currentMonthInText %}
+                            {{currentYearInText}}
+                        {% endif %}
+                        
+                    </h2>
+                    <div class="grid content-stretch min-h-full">
+                        {% if calenderEventDictionary %}
+                        <div id="week" class="grid grid-cols-7 gap-2">
+                            {% for i in listDaysInCurrentMonth %}
+                                <div class="grid bg-slate-200 rounded-md gap-2 p-2">
+                                    {{i}}
+                                    {% for event, days in calenderEventDictionary.items %}
+                                    {% if i in days %}
+                                        <div class="bg-slate-300 p-2">
+                                            {{ event.eventid.eventType.type }}<br>
+                                            {{ event.eventid.itemid.naam }}<br>
+                                            {{ event.calenderid.userid.username }}<br>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                                </div>
+                            {% endfor %}
+                        </div>
+
+                        {% endif %}
+                    </div>
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
                     <a href="event-manager">Manage Events</a>
