Grote refactor code, best practices implementaties
todo: hash implementeren die de <CalendarEvent instance1> als input heeft en RGB uitput om een gelinkte vaste/blijvende kleur te geven aan deze specifieke event

- Alles van camelCase omgezet naar snake_case om python best practice te volgen
- WIP upgrade van overview.html, backend kan nu andere maanden tonen, todo: frontend
- utils.py aangemaakt om de code meer overzichtelijk te maken volgens SRP design principle
    - process_calendar() logic scheiden van views.py dit zou volgens best practice zijn om beter modular en maintainable code te hebben
- bugfix overview.html display van events op andere maanden

--- a/UitleensysteemApp/app/templates/app/event-manager.html
+++ b/UitleensysteemApp/app/templates/app/event-manager.html
@@ -19,16 +19,16 @@
                         {% endfor %}
                     </div>
                     {% endif %}
-                    {% if calendarEvents %}
+                    {% if calendar_events %}
                         <ul class="grid gap-4">
-                            {% for calenderEvent in calendarEvents %}
+                            {% for calendar_event in calendar_events %}
                                 <li class="bg-slate-700 rounded-xl p-4">
-                                    <form method="post" action="event-manager" id="{{ calenderEvent.id }}">{% csrf_token %}
+                                    <form method="post" action="event-manager" id="{{ calendar_event.id }}">{% csrf_token %}
                                         <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
-                                            <h3 class="text-white">{{ calenderEvent }}</h3>
+                                            <h3 class="text-white">{{ calendar_event }}</h3>
                                             <select class="text-slate-800" name="event_type" >
-                                            {% for eventtype in EventTypes %}
-                                                {% if calenderEvent.eventid.eventType.type == eventtype.type %}
+                                            {% for eventtype in event_types %}
+                                                {% if calendar_event.eventid.eventType.type == eventtype.type %}
                                                     <option value='{{ eventtype.type }}' selected>{{ eventtype.type }}</option>
                                                 {% else %}
                                                     <option value='{{ eventtype.type }}'>{{ eventtype.type }}</option>
@@ -37,20 +37,20 @@
                                             </select>
 
                                             <!-- 
-                                            {{calenderEvent.eventid.itemid.naam}}
+                                            {{calendar_event.eventid.itemid.naam}}
                                             {% for item in Items %}
                                                 {{item}}
                                             {% endfor %} -->
                                             <select class="text-slate-800" name="item_naam" >
-                                                {% for item in Items %}
-                                                    {% if calenderEvent.eventid.itemid.naam == item.naam %}
+                                                {% for item in items %}
+                                                    {% if calendar_event.eventid.itemid.naam == item.naam %}
                                                         <option value='{{ item.naam }}' selected>{{ item.naam }}</option>
                                                     {% else %}
                                                         <option value='{{ item.naam }}'>{{ item.naam }}</option>
                                                     {% endif %}
                                                 {% endfor %}
                                             </select>
-                                            <!-- {% for eventtype in EventTypes %}
+                                            <!-- {% for eventtype in event_types %}
                                                 <p>{{ eventtype.type }}</p>
                                                 <p>{{ event.eventid.eventType.type }}</p>
                                             {%endfor%} -->
@@ -67,14 +67,14 @@
                                                 d: Represents the day in two digits (e.g., 09 for the 9th)."
                                             
                                             -->
-                                            <input type="date" name="start_date" value="{{ calenderEvent.eventid.start|date:'Y-m-d' }}"></input>
-                                            <input type="date" name="end_date" value="{{ calenderEvent.eventid.end|date:'Y-m-d' }}"></input>
+                                            <input type="date" name="start_date" value="{{ calendar_event.eventid.start|date:'Y-m-d' }}"></input>
+                                            <input type="date" name="end_date" value="{{ calendar_event.eventid.end|date:'Y-m-d' }}"></input>
 
                                         </div>
                                         <div class="flex place-content-end gap-4 py-4">
-                                            <input type="hidden" name="event_id" value="{{ calenderEvent.id }}">
-                                            <button type="submit" name="action" class="bg-red-200 p-4 rounded-xl min-w-40 text-center" value="Delete" form="{{ calenderEvent.id }}">Delete</button>
-                                            <button type="submit" name="action" class="bg-green-200 p-4 rounded-xl min-w-40 text-center" value="Update"form="{{ calenderEvent.id }}">Update</button>
+                                            <input type="hidden" name="event_id" value="{{ calendar_event.id }}">
+                                            <button type="submit" name="action" class="bg-red-200 p-4 rounded-xl min-w-40 text-center" value="Delete" form="{{ calendar_event.id }}">Delete</button>
+                                            <button type="submit" name="action" class="bg-green-200 p-4 rounded-xl min-w-40 text-center" value="Update"form="{{ calendar_event.id }}">Update</button>
                                         </div>
                                     </form>
                                 </li>
